added exercises